--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
+    "formik": "^2.4.6",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -17,7 +18,8 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
